# newsapi-test-suite

./: .env.example  README.md  pyproject.toml  requirements.txt
config/: base.py  settings.py
docs/: API-Defects-Report.md  API-Test-Cases-NewsAPI.html  API-Test-Cases-NewsAPI.xlsx  News-API.postman_collection.json  metadata.txt
tests/: conftest.py  test_auth.py  test_everything.py  test_sources.py  test_top_headlines.py
tests_bdd/features/: scenarios.feature
tests_bdd/step_defs/: test_scenarios.py
toolkit/: __init__.py  api_clients.py  enums.py
